# GitTributary

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  PRIVACY.md  README.en.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts  vitest.host.config.ts
plugins/attachment-manager/backend/: Cargo.toml
plugins/attachment-manager/backend/src/: abi.rs  github.rs  lib.rs  model.rs  paths.rs  references.rs  rewrite.rs  scan.rs
plugins/attachment-manager/backend/src/tests/: migration.rs  mod.rs  performance.rs  scanning.rs
plugins/site-publisher/backend/: Cargo.toml
plugins/site-publisher/backend/crates/gt-site/: Cargo.toml
plugins/site-publisher/backend/crates/na-site/: Cargo.toml
plugins/site-publisher/backend/src/: lib.rs
plugins/site-publisher/backend/tests/: local_publish.rs  pages_publish_e2e.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: mutants.toml
src-tauri/.config/: nextest.toml
src-tauri/benches/: core_operations.rs
src-tauri/crates/gt-data/: Cargo.toml  README.md
src-tauri/crates/gt-data/src/: error.rs  lib.rs
src-tauri/crates/gt-data/src/domain/: credentials_store.rs  flow.rs  mod.rs  profiles.rs  run_journal.rs  run_result.rs  workspace.rs  workspace_store.rs
src-tauri/crates/gt-data/src/storage/: mod.rs  namespace.rs  policy.rs  store.rs  sync.rs
src-tauri/crates/gt-data/src/tests/: mod.rs  repositories_test.rs  storage_real_data_probe.rs  storage_store_properties.rs  storage_sync_test.rs
src-tauri/crates/gt-data/tests/: run_journal_test.rs  run_result_test.rs
src-tauri/crates/gt-files/: Cargo.toml
src-tauri/crates/gt-files/src/: lib.rs  tests.rs  tree.rs
src-tauri/crates/gt-files/tests/: files_properties.rs
src-tauri/crates/gt-flow/: Cargo.toml
src-tauri/crates/gt-flow/src/: builder.rs  event.rs  lib.rs  node.rs  parser.rs  runner.rs
src-tauri/crates/gt-flow/src/event/: catalog.rs
src-tauri/crates/gt-flow/src/parser/: syntax.rs
src-tauri/crates/gt-flow/src/runner/: expressions.rs  model.rs
src-tauri/crates/gt-flow/tests/: flow_parse_test.rs  flow_properties.rs
src-tauri/crates/gt-flow/tests/flow_parse_test/: builder.rs  event_pool.rs  parser.rs  runner.rs  support.rs
src-tauri/crates/gt-git/: Cargo.toml
src-tauri/crates/gt-git/src/: branch.rs  commit.rs  diff.rs  error.rs  lib.rs  log.rs  pages.rs  path_update.rs  remote.rs  repo.rs  status.rs
src-tauri/crates/gt-git/src/path_update/: transport.rs
src-tauri/crates/gt-git/tests/: basic_test.rs  performance_test.rs
src-tauri/crates/gt-plugin-host/: Cargo.toml
src-tauri/crates/gt-plugin-host/src/: lib.rs  main.rs
src-tauri/crates/gt-plugin-protocol/: Cargo.toml
src-tauri/crates/gt-plugin-protocol/src/: lib.rs
src-tauri/crates/gt-plugin-protocol/tests/: protocol_properties.rs
src-tauri/crates/gt-site/: Cargo.toml
src-tauri/crates/gt-site/src/: builder.rs  lib.rs  scan.rs  types.rs  utils.rs
src-tauri/crates/gt-site/src/renderer/: assets.rs  chrome.rs  context.rs  emphasis.rs  links.rs  markdown.rs  mod.rs  style.rs  template.rs
src-tauri/crates/gt-store/: Cargo.toml
src-tauri/crates/gt-store/src/: credentials.rs  error.rs  lib.rs  namespace.rs  store.rs  sync.rs  workspace.rs
src-tauri/crates/gt-store/tests/: real_data_probe.rs  store_properties.rs  store_test.rs  sync_test.rs
src-tauri/crates/na-data/: Cargo.toml  README.md
src-tauri/crates/na-data/src/: error.rs  lib.rs
src-tauri/crates/na-data/src/domain/: credentials.rs  credentials_store.rs  dynamic.rs  flow.rs  hub.rs  plugin_containers.rs  plugin_data.rs  remote_metadata.rs  run_journal.rs  run_result.rs  settings.rs
src-tauri/crates/na-data/src/storage/: mod.rs  namespace.rs  record.rs  store.rs  sync.rs
src-tauri/crates/na-data/src/tests/: mod.rs  plugin_data_test.rs  repositories_test.rs  storage_store_test.rs  (+1 more)
src-tauri/crates/na-data/tests/: run_journal_test.rs  run_result_test.rs
src-tauri/crates/na-files/: Cargo.toml
src-tauri/crates/na-files/tests/: files_properties.rs
src-tauri/crates/na-flow/: Cargo.toml
src-tauri/crates/na-flow/src/: builder.rs  lib.rs  model.rs  node.rs  parser.rs
src-tauri/crates/na-flow/tests/: flow_parse_test.rs  flow_properties.rs
src-tauri/crates/na-git/: Cargo.toml
src-tauri/crates/na-git/src/: commit.rs  error.rs  lib.rs  path_update.rs  remote.rs
src-tauri/crates/na-git/tests/: basic_test.rs  performance_test.rs
src-tauri/crates/na-plugin-host/: Cargo.toml
src-tauri/crates/na-plugin-host/src/: lib.rs  main.rs
src-tauri/crates/na-plugin-protocol/: Cargo.toml
src-tauri/crates/na-plugin-protocol/tests/: protocol_properties.rs
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config_dir.rs  error.rs  extensions.rs  identity.rs  keys.rs  lib.rs  main.rs  plugin_host.rs  plugin_market.rs
src-tauri/src/app/: events.rs  mod.rs  startup.rs  state.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/data/: commands.rs  credentials.rs  mod.rs  sync.rs  sync_tests.rs  workspace.rs
src-tauri/src/application/files/: commands.rs
src-tauri/src/application/flow/: commands.rs
src-tauri/src/application/git/: auth.rs  commands.rs  identity.rs  mod.rs  remote.rs
src-tauri/src/application/plugins/: host.rs  market.rs  mod.rs  registry.rs
src-tauri/src/commands/: credentials.rs  files.rs  flow.rs  git.rs  mod.rs  remote.rs  site.rs  store.rs  sync.rs  workspace.rs
src-tauri/src/support/: config_dir.rs  error.rs  mod.rs
(+448 files in other folders)
