[workspace]
members = [
    "crates/gt-git",
    "crates/gt-files",
    "crates/gt-store",
    "crates/gt-flow",
    "crates/gt-plugin-protocol",
    "crates/gt-plugin-host",
]

[package]
name = "gittributary"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gittributary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gt-git = { path = "crates/gt-git" }
gt-files = { path = "crates/gt-files" }
gt-store = { path = "crates/gt-store" }
gt-flow = { path = "crates/gt-flow" }
gt-plugin-protocol = { path = "crates/gt-plugin-protocol" }
dirs-next = "2"

[dev-dependencies]
tempfile = "3"
