[workspace]
members = [
    "crates/na-git",
    "crates/na-files",
    "crates/na-data",
    "crates/na-flow",
    "crates/na-plugin-protocol",
    "crates/na-plugin-host",
]

[package]
name = "noteaura"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "noteaura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
na-git = { path = "crates/na-git" }
na-files = { path = "crates/na-files" }
na-data = { path = "crates/na-data" }
na-flow = { path = "crates/na-flow" }
na-plugin-protocol = { path = "crates/na-plugin-protocol" }
dirs-next = "2"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "core_operations"
harness = false
