[package]
name = "site-publisher-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/gt-site"]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gt-site = { path = "crates/gt-site" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
