[package]
name = "site-publisher-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/na-site"]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
na-site = { path = "crates/na-site" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
