[package]
name = "gt-store"
version = "0.1.3"
edition = "2021"
description = "GitTributary 数据中心 — 统一配置 KV 存储"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
whoami = "1"
git2 = "0.19"

[dev-dependencies]
tempfile = "3"
