[package]
name = "na-data"
version = "0.1.3"
edition = "2021"
description = "NoteAura 统一数据层门面与领域 Repository"
publish = false

[dependencies]
crc32fast = "1"
na-flow = { path = "../na-flow" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
whoami = "1"
git2 = "0.19"

[dev-dependencies]
proptest = "1.7"
tempfile = "3"
