[package]
name = "na-flow"
version = "0.1.3"
edition = "2021"
description = "NoteAura Flow 解析与展示摘要层"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
proptest = "1.7"
