[package]
name = "gt-site"
version = "0.1.3"
edition = "2021"
description = "GitTributary static HTML site builder"

[dependencies]
gt-files = { path = "../../../../../src-tauri/crates/gt-files" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
